Added missing methods